# flow

./: README.md  index.html  package.json
src/: App.tsx  constants.ts  index.css  main.tsx
src-tauri/: Cargo.toml  migrations.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/io/: tasks.rs
src-tauri/src/market/: data.rs
src-tauri/src/server/: server.rs
src-tauri/src/wallet/: actions.rs
src/components/: Root.tsx
src/components/AddDevice/: AddColdcard.tsx  AddDevice.tsx  AddKeystone.tsx  AddLedger.tsx  DeviceImport.tsx  ImportStep.tsx
src/components/Fiat/: CurvedLine.tsx  Fiat.tsx
src/components/Home/: Home.tsx  Tile.tsx
src/components/Mempool/: DensityPlot.tsx  Mempool.tsx  MempoolTx.tsx
src/components/Navigation/: NavBar.tsx  NavItem.tsx
src/components/Receive/: Receive.tsx  UpdatingQR.tsx
src/components/Router/: Router.tsx
src/components/Send/: Broadcast.tsx  Confirm.tsx  SendTx.tsx
src/components/Wallet/: TranscationItem.tsx  Wallet.tsx  WalletSettings.tsx
src/hooks/: useFetchAllFees.tsx  useFiatPrice.tsx  useFreshAddress.tsx  useMempoolStats.tsx  useMempoolTxs.tsx  useNodeCount.tsx  usePriceHistory.tsx  useTotalBalance.tsx  useTxHistory.tsx  walletContext.tsx
src/interfaces/: Device.ts  DeviceEnum.ts  MempoolTransaction.ts  PendingTx.ts  PsbtStyle.ts  Tx.ts
src/util/: util.ts
